Update .gitignore and Testcase

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
-!/Results/
-!/Results/log.html
+/.idea/
+/Results/
+log.html
+*output.xml
+*report.html
+*selenium-screenshot*.png
